add request api core

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name" : "",
-    "appid" : "",
+    "name" : "uniapp-demo",
+    "appid" : "__UNI__EA84B60",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
